# the-commics

./: .gitignore  Batch-1-2-DB-Content.csv  Batch-1-2-DB-Content.tsv  README.md
cms/api/: main.py  requirements.txt
cms/api/app/core/: config.py  security.py
cms/api/app/db/: database.py
cms/api/app/models/: base.py  category.py  chapter.py
cms/api/app/schemas/: models.py
cms/fe/: Dockerfile
cms/fe/src/: App.jsx
cms/fe/src/components/: SeoEditModal.jsx
cms/fe/src/layouts/: AdminLayout.jsx
cms/fe/src/pages/: ChaptersPage.jsx  ComicsPage.jsx  SeoEditorPage.jsx
docs/: 000-Index.md  005-Overview.md
docs/010-Planning/: Roadmap.md
docs/020-Requirements/: PRD-CDN.md  PRD-CMS.md  PRD-Crawler.md  PRD-Database.md  PRD-Frontend.md  PRD-GraphQL.md  RULE-Seo-Contents.md  Seo-rules-manga-v2.md
docs/030-Specs/: SDD-FrontEnd-Missing.md  SDD-Improve-CMS.md  SDD-Optimize-Crawl.md  SDD-Optimize-SEO.md  SEO-Keyword-Tier-2.md  Spec-Architecture.md  Spec-CDN.md  Spec-Crawler-V2.md  Spec-Crawler.md  Spec-Database.md  Spec-Frontend.md  Spec-GraphQL.md  Specs-CMS.md  Specs-SEO-Keyword.md  Specs-Strategy-Seo-Keyword-V2.md  Specs-Strategy-Seo-Keyword.md
docs/035-Implementation/: 035-CDN-Implementation.md  035-Crawler-Implementation.md  035-Frontend-Implementation.md  035-GraphQL-Implementation.md  404.md  CDN-Implementation.md  Crawler-Implementation.md  Frontend-Implementation.md  GraphQL-Implementation.md  Implementation-Strategy-SEO-Keyword.md  Strategy-SEO-Keyword.md
docs/040-Design/: Deep-Survey-Data.md  Design-Prototype.md  Survey-Source.md
docs/050-QA/: Acceptance-Criteria.md  QA-Pre-Static-SEO.md  QA-QC-FE-SEO-Checklist.md  QA-QC-SEO-Check-Final.md  QA-Report-002-Frontend-Cache-Sitemap.md  QA-Review-Report.md  QC-Final-Report.md  QC-Test-Plan.md  Test-Plan.md
docs/060-Operations/: Crawl-Workflows.md  Deploy-Static-SEO-Cloudflare.md
docs/070-Security/: Requirement-Security--System-Architect.md  Security-Audit-Report-001.md
ops/docker/: docker-compose.yml
ops/script/: check-sitemaps.sh  run-migrations.sh  sitemap-comparer.cjs
ops/scripts/: deploy.sh  pull.sh  trigger_crawl.sh
ops/staging/: .env.staging.example  README.md  docker-compose.yml
ops/staging/docs/: VPS-Cloudflare-Setup.md
ops/staging/nginx/: nginx.conf
ops/staging/nginx/conf.d/: default.conf
ops/staging/scripts/: backup.sh  bootstrap.sh  check-server.sh  ddos-guard.sh  setup-firewall.sh
src/backend/cdn/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
src/backend/cdn/actix-files/: Cargo.toml
src/backend/cdn/actix-files/examples/: guarded-listing.rs
src/backend/cdn/actix-files/src/: chunked.rs  directory.rs  error.rs  files.rs  lib.rs  named.rs  path_buf.rs  range.rs  service.rs
src/backend/cdn/actix-files/tests/: encoding.rs  guard.rs  traversal.rs
src/backend/cdn/logic/: Cargo.toml
src/backend/cdn/logic/src/: cache.rs  image.rs  lib.rs  types.rs
src/backend/cdn/ops/docker/: imgflux.Dockerfile
src/backend/cdn/ops/kubernetes/: imgflux.yaml
src/backend/cdn/server/: Cargo.toml
src/backend/cdn/server/src/: config.rs  main.rs  routes.rs
src/backend/crawler/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/backend/crawler/activities/: chapter_activities.py  comic_activities.py
src/backend/crawler/core/: logger.py
src/backend/crawler/db/: database.py  models.py
src/backend/crawler/models/: comic_models.py
src/backend/crawler/parsers/: factory.py  (+2 more)
src/backend/graphql/: .gitignore  Cargo.toml  Dockerfile
src/backend/graphql/src/: cache.rs  db.rs  main.rs  models.rs  schema.rs
src/backend/graphql/src/graphql/: dataloaders.rs  mod.rs  mutation.rs  query.rs  types.rs
src/cms/api/: main.py
src/cms/fe/: Caddyfile  package-lock.json  package.json
src/ui/: Dockerfile  astro.config.mjs  codegen.ts  lh-report.json  package-lock.json  package.json  stats.html
src/ui/public/: site.webmanifest
src/ui/src/: env.d.ts  middleware.ts
(+104 files in other folders)
